fix: wrap long article text on narrow screens

--- a/app/(site)/articles/[year]/[slug]/page.module.scss
+++ b/app/(site)/articles/[year]/[slug]/page.module.scss
@@ -2,6 +2,8 @@
 
 .article {
     @include grid-stack(var(--space-scale-075));
+
+    overflow-wrap: anywhere;
 }
 
 .summary {
